<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_constraintDimensionRatio="1:1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_details_poster"
            android:layout_width="0dp"
            android:layout_height="@dimen/movie_cover_height"
            android:alpha="0.25"
            android:contentDescription="@string/movie_cover"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/end_game_poster_bw" />

        <ImageView
            android:id="@+id/iv_details_poster_gradient"
            android:layout_width="0dp"
            android:layout_height="@dimen/movie_cover_height"
            android:contentDescription="@string/movie_cover_gradient"
            android:src="@drawable/gradient_poster_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_back_height"
                android:layout_marginTop="@dimen/size_back_margin_top"
                android:alpha="0.25"
                android:drawablePadding="@dimen/back_image_padding"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/back_padding_start"
                android:paddingEnd="@dimen/back_padding_start"
                android:text="@string/string_back"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_back" />

            <LinearLayout
                android:id="@+id/ll_movie"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_name_layout_height"
                android:layout_marginTop="@dimen/movie_name_layout_margin_top"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_details_pg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_pg13"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_pg_text"
                    android:textStyle="bold" />

                <com.github.avanlex.fundamentalsassignments.FontFitTextView
                    android:id="@+id/tv_details_movie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="0.9"
                    android:text="@string/string_avengers_end_game"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_movie_name"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_details_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_tags"
                android:textColor="@color/pink"
                android:textSize="@dimen/size_tagline" />

            <LinearLayout
                android:id="@+id/ll_rating"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.github.avanlex.fundamentalsassignments.VectorRatingBar
                    android:id="@+id/vrb_details_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:numStars="5"
                    android:progressBackgroundTint="@color/grey"
                    android:progressDrawable="@drawable/ratingbar_svg_selector"
                    android:progressTint="@color/pink"
                    android:rating="3"
                    android:secondaryProgressTint="@color/grey"
                    app:drawableHeight="12dp"
                    app:drawableWidth="12dp"
                    app:innerPadding="3.9dp" />

                <TextView
                    android:id="@+id/tv_details_review_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8.9dp"
                    android:text="@string/string_review_count"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_storyline"
                    android:textColor="@color/color_white1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_details_storyline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:alpha="0.75"
                    android:letterSpacing="0.08"
                    android:text="@string/string_storyline_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_details_storyline_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="7dp"
                android:text="@string/string_cast"
                android:textColor="@color/color_white1"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_actor_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_details"
            app:layout_constraintVertical_bias="0.0"
            tools:itemCount="6"
            tools:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/view_holder_actor"
            tools:spanCount="2"
            tools:src="@tools:sample/avatars" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


