<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MovieDetailsActivity">

    <ImageView
        android:id="@+id/image_cover"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_cover_height"
        android:adjustViewBounds="true"
        android:alpha="0.25"
        android:background="@drawable/poster"
        android:contentDescription="@string/movie_cover"
        android:src="@drawable/gradient_transpartent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_cover_gradient"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_cover_height"
        android:adjustViewBounds="true"
        android:alpha="1"
        android:contentDescription="@string/movie_cover_gradient"
        android:src="@drawable/gradient_transpartent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/movie_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:alpha="0.25"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:text="@string/string_back"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_back" />

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_marginTop="138dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_pg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_pg13"
                android:textColor="@color/white"
                android:textSize="@dimen/size_pg_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="0dp"
                android:layout_weight="900"
                android:lineSpacingMultiplier="0.9"
                android:text="@string/string_avengers_end_game"
                android:textColor="@color/white"
                android:textSize="@dimen/size_movie_name"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/text_tagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_tags"
            android:textColor="@color/text_red"
            android:textSize="@dimen/size_tagline" />

        <LinearLayout
            android:id="@+id/reviews"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="12dp"
                android:layout_height="12dp"
                app:srcCompat="@drawable/ic_star_icon" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                app:srcCompat="@drawable/ic_star_icon"
                android:contentDescription="TODO" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                app:srcCompat="@drawable/ic_star_icon" />

            <ImageView
                android:id="@+id/star4"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                app:srcCompat="@drawable/ic_star_icon" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="3.25dp"
                app:srcCompat="@drawable/ic_star_icon"
                app:tint="@color/dark_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8.9dp"
                android:text="@string/string_reviews"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/storyline_layout"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_storyline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_storyline"
                android:textColor="#ECECEC "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:alpha="0.75"
                android:letterSpacing="0.08"
                android:text="@string/string_storyline_content"
                android:textColor="@color/white" />

        </LinearLayout>


        <TextView
            android:id="@+id/text_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="7dp"
            android:text="@string/string_cast"
            android:textColor="#ECECEC "
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/text_actor1"
        android:layout_width="80dp"
        android:layout_height="118dp"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/string_robert_downey_jr"
        android:textColor="@color/color_actor_text"
        app:drawableTopCompat="@drawable/actor_downey"
        app:layout_constraintEnd_toStartOf="@+id/linear_actor2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_details" />


<!--    <LinearLayout-->
<!--        android:id="@+id/linear_actor1"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="118dp"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/linear_actor2"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/movie_details">-->

<!--        <ImageView-->
<!--            android:id="@+id/image_actor1"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="80dp"-->
<!--            android:layout_weight="1"-->
<!--            app:srcCompat="@drawable/actor_downey" />-->

<!--        <TextView-->
<!--            android:id="@+id/text_downey"-->
<!--            android:layout_width="80dp"-->
<!--            android:layout_height="32dp"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/string_robert_downey_jr"-->
<!--            android:textColor="#ECECEC " />-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/linear_actor2"
        android:layout_width="80dp"
        android:layout_height="118dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linear_actor3"
        app:layout_constraintStart_toEndOf="@+id/text_actor1"
        app:layout_constraintTop_toBottomOf="@+id/movie_details">

        <ImageView
            android:id="@+id/image_actor2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/actor_evans"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/text_evans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/string_chris_evans"
            android:textColor="#ECECEC " />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_actor3"
        android:layout_width="80dp"
        android:layout_height="118dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linear_actor4"
        app:layout_constraintStart_toEndOf="@+id/linear_actor2"
        app:layout_constraintTop_toBottomOf="@+id/movie_details">

        <ImageView
            android:id="@+id/image_actor3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/actor_ruffalo"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/text_ruffalo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/string_mark_ruffalo"
            android:textColor="#ECECEC " />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_actor4"
        android:layout_width="80dp"
        android:layout_height="118dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linear_actor3"
        app:layout_constraintTop_toBottomOf="@+id/movie_details">

        <ImageView
            android:id="@+id/image_actor4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/actor_hemsworth"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/text_hemsworth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_weight="1"
            android:text="@string/string_chris_hemsworth"
            android:textColor="#ECECEC " />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout><?xml version="1.0" encoding="utf-8"?>